--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-side-drawer": "^1.2.5",
     "react-native-tailwindcss": "^1.1.9",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.1.2"
   },
